--- a/website/templates/history.html
+++ b/website/templates/history.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/historystyle.css') }}">
 {% endblock %}
 {% block body%}
-<div class="container my-3">
+<div class="container my-2">
     <!-- <h2 class="text-center wtxt mt-3">Data History</h2> -->
     <div class="row d-flex justify-content-center">
         <div class="col-md-4 d-flex justify-content-center dropdown ">
@@ -38,7 +38,7 @@
                     <div class="card disp-card">
                         <div class="card-body">
                             <div class="ctitle">
-                                <img src="{{ url_for('static', filename='images/green.png') }}" alt="">
+                                <img class="card-icon" src="{{ url_for('static', filename='images/green.png') }}" alt="">
                             </div>
                             <div class="card-title scard-title" id="num-entry"></div>
                             <p class="card-text scard-text">Current Entry</p>
@@ -49,7 +49,7 @@
                     <div class="card disp-card">
                         <div class="card-body">
                             <div class="ctitle">
-                                <img src="{{ url_for('static', filename='images/red.png') }}" alt="">
+                                <img class="card-icon" src="{{ url_for('static', filename='images/red.png') }}" alt="">
                             </div>
                             <div class="card-title scard-title" id="num-exit"></div>
                             <p class="card-text scard-text">Current Exit</p>
@@ -60,7 +60,7 @@
                     <div class="card disp-card">
                         <div class="card-body">
                             <div class="ctitle">
-                                <img src="{{ url_for('static', filename='images/green.png') }}" alt="">
+                                <img class="card-icon" src="{{ url_for('static', filename='images/green.png') }}" alt="">
                             </div>
                             <div class="card-title scard-title" id="num-inside"></div>
                             <p class="card-text scard-text">Current Inside</p>
@@ -71,7 +71,7 @@
                     <div class="card disp-card">
                         <div class="card-body">
                             <div class="ctitle">
-                                <img src="{{ url_for('static', filename='images/green.png') }}" alt="">
+                                <img class="card-icon" src="{{ url_for('static', filename='images/green.png') }}" alt="">
                             </div>
                             <div class="card-title scard-title" id="num-total"></div>
                             <p class="card-text scard-text">Overall total</p>
@@ -83,10 +83,14 @@
 
             <div class="row">
                 <div class="col-md-6">
-                    <canvas id="myChart" style="max-width:100%; max-height:500px; min-height:350px"></canvas>
+                    <div class="disp-card">
+                        <canvas id="myChart" style="max-width:100%; max-height:500px; min-height:350px"></canvas>
+                    </div>
                 </div>
                 <div class="col-md-6">
-                    <canvas id="myChart2" style="max-width:100%; max-height:500px; min-height:350px"></canvas>
+                    <div class="disp-card">
+                        <canvas id="myChart2" style="max-width:100%; max-height:500px; min-height:350px"></canvas>
+                    </div>
                 </div>
             </div>
         </div>
