--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -12,7 +12,7 @@
             <div class="card disp-card">
                 <div class="card-body">
                     <div class="ctitle">
-                        <img src="{{ url_for('static', filename='images/green.png') }}" alt="">
+                        <img class="card-icon" src="{{ url_for('static', filename='images/green.png') }}" alt="">
                     </div>
                     <div class="card-title my-1 scard-title" id="num-entry">
                     </div>
@@ -24,7 +24,7 @@
             <div class="card disp-card">
                 <div class="card-body">
                     <div class="ctitle">
-                        <img src="{{ url_for('static', filename='images/red.png') }}" alt="">
+                        <img class="card-icon" src="{{ url_for('static', filename='images/red.png') }}" alt="">
                     </div>
                     <div class="card-title my-1 scard-title" id="num-exit">
                     </div>
@@ -36,7 +36,7 @@
             <div class="card disp-card">
                 <div class="card-body">
                     <div class="ctitle">
-                        <img src="{{ url_for('static', filename='images/green.png') }}" alt="">
+                        <img class="card-icon" src="{{ url_for('static', filename='images/green.png') }}" alt="">
                     </div>
                     <div class="card-title my-1 scard-title" id="num-inside">
                     </div>
@@ -48,7 +48,7 @@
             <div class="card disp-card">
                 <div class="card-body">
                     <div class="ctitle">
-                        <img src="{{ url_for('static', filename='images/green.png') }}" alt="">
+                        <img class="card-icon" src="{{ url_for('static', filename='images/green.png') }}" alt="">
                     </div>
                     <div class="card-title my-1 scard-title" id="num-total">
                     </div>
@@ -58,37 +58,24 @@
         </div>
     </div>
 
-    <div class="row d-flex justify-content-end">
-        <div class="col-md-4">
-            <form   enctype="multipart/form-data" method="POST" action="/video" class="d-flex input-group mb-3">
-                <!-- <input type="file" class="form-control input-file" name="video" id="video"> -->
-                <label for="video" class="btn wtxt sbtn2" id="button" >Open</label>
-                <input type="text" id="fileName" readonly="readonly" >
-                <div class="file_input_div" style="display: inline;">
-                <input type="file" id="video" name="video"  style="opacity:0;display:none; position:relative; left:-40px;"  onchange="javascript: document.getElementById ('fileName') . value = this.value"/>
-                </div>
-                <input class="input-group-text btn wtxt sbtn2" for="inputGroupFile02" type="submit" value="Play">
-            </form>
-        </div>
-        <div class="col-md-2">
-            <form method="GET" action="/" class="input-group mb-1">
-                <!-- <select class="form-select" aria-label="Default select example">
-                    <option selected>Choose Camera</option>
-                    {% for camera in data.cameras %}
-                        <option value="{{camera.port}}">Camera {{camera.port}} ({{camera.width}}x{{camera.height}})</option>
-                    {% endfor %}
-                  </select> -->
-                <input class="input-group-text btn wtxt sbtn" style="font-size: 0.8em;" for="inputGroupFile02" type="submit" value="Switch to Cam">
-            </form>
-        </div>
     
-    </div>
     <!-- <div class="row d-flex justify-content-end">
 
         </div> -->
 
-    <div class="row my-2 d-flex align-items-start vidpluschart" style="padding:0;">
-        <div class="col-md-6 asdf">
+    <div class="row my-2 d-flex align-items-end vidpluschart" style="padding:0;">
+
+        <div class="col-md-6 asdf my-2">
+            <div class="row d-flex mb-3 justify-content-start mx-1">
+                <div class="col-6 col-md-3">
+                    <form method="GET" action="/">
+                        <button class="btn wtxt i-sbtn me-4" id="stop-button" >Stop</button>
+                    </form>
+                </div>
+                <div class="col-6 col-md-3">
+                    <button class="btn wtxt i-sbtn" id="clear-button" >Clear</button>
+                </div>
+            </div>
             <div class="disp-card">
                 <!-- <canvas id="myChart" style=" width:100%;max-width:600px; height:100%; min-height:300px;"></canvas> -->
                 <canvas id="myChart" style=" width:100%; height:100%; min-height:300px;"></canvas>
@@ -96,15 +83,43 @@
         </div>
 
         
-        <div class="col-md-6 asdf">
+        <div class="col-md-6 asdf my-2">
+            
+            <div class="row d-flex justify-content-around">
+                <div class="col-md-6" style="min-width: 270px">
+                    <form   enctype="multipart/form-data" method="POST" action="/video" class="d-flex input-group mb-3">
+                        <!-- <input type="file" class="form-control input-file" name="video" id="video"> -->
+                        <label for="video" class="btn wtxt sbtn2" id="button" >Open</label>
+                        <input type="text" class="form-control" id="fileName" readonly="readonly" >
+                        <input type="file" id="video" name="video"  style="opacity:0;display:none; position:relative; left:-40px;"  onchange="javascript: document.getElementById ('fileName') . value = this.value"/>
+                        <input class="input-group-text btn wtxt sbtn2" for="inputGroupFile02" type="submit" value="Play">
+                    </form>
+                </div>
+                <div class="col-md-6" style="min-width: 270px">
+                   
+                    <form method="POST" action="/" class="d-flex input-group mb-1">
+                        <button class="btn sbtn2 wtxt" id="scan-cameras">Scan</button>
+                        <select class="form-select sinput" id="camera-select" name="camera" aria-label="Default select example">
+                            <option selected>Choose Camera</option>
+                          </select>
+                        <input class="input-group-text btn wtxt sbtn2" style="font-size: 0.8em;" for="inputGroupFile02" type="submit" value="Switch">
+                    </form>
+                </div>
+            
+            </div>
+
             <div class="disp-card video">
                 <!-- <div class="video-mask"> -->
                 {% if data.video %}
+                    {% if not data.live %}
                    <!-- <img class="" style="max-height:320px" src="{{ url_for('handlers.video_feed', video=data.video.split('/')[-1]) }}" alt="video feed">  -->
-                   <img class="video-source" src="{{ url_for('handlers.video_feed', video=data.video.split('/')[-1]) }}" alt="video feed"> 
-               {% else %}
-                   <img class="video-source" src="{{ url_for('handlers.video_feed', video=0) }}" alt="video feed">
-               
+                        <img class="video-source" src="{{ url_for('handlers.video_feed', video=data.video.split('/')[-1]) }}" alt="video feed"> 
+                    {% else %}
+                        <img class="video-source" src="{{ url_for('handlers.video_feed', video=data.video) }}" alt="video feed">
+                    {% endif %}
+                {% else %}
+                    <!-- <div class="video-source">
+                    </div> -->
                {% endif %}
                <!-- </div> -->
             </div>
@@ -192,9 +207,7 @@
             scaleFontColor: "#FFFFFF"
         };
 
-        var current = 0;
-        var entry = 0;
-        var exit = 0;
+
         const context = document.getElementById('myChart').getContext('2d');
 
         const lineChart = new Chart("myChart", config);
@@ -202,6 +215,9 @@
         const source = new EventSource("{{ url_for('handlers.entry_data') }}");
 
         source.onmessage = function (event) {
+            var current = 0;
+            var entry = 0;
+            var exit = 0;
             const data = JSON.parse(event.data);
 
             numeric = []
@@ -238,6 +254,52 @@
 
 
         }
+
+        document.querySelector("#scan-cameras").addEventListener('click', (e) =>{
+            e.preventDefault()
+            try {
+                fetch(`/scan`, {
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    method: 'GET'
+                }).then(response => {
+                    return response.json()
+                }).then(data => {
+                    const select = document.querySelector("#camera-select")
+                    select.innerHTML = "<option selected>Choose Camera</option>"
+                    for(let camera of data.cameras){
+                        select.innerHTML += `<option value='${camera.port}'>Camera ${camera.port} (${camera.width}x${camera.height})</option>`
+                    }
+                    
+                    
+                    alert("Scan complete")
+                })
+            } catch (e) {
+                console.log(e.message)
+            }
+
+        })
+
+        document.querySelector("#clear-button").addEventListener("click", () =>{
+            try {
+                fetch(`/clear`, {
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    method: 'DELETE'
+                }).then(response => {
+                    return response.json()
+                }).then(data => {
+                    console.log(data)
+                    location.reload()
+                })
+            } catch (e) {
+                console.log(e.message)
+            }
+
+
+        })
 
 
 
