corrected login and sign up responsiveness

--- a/website/static/styles/basestyle.css
+++ b/website/static/styles/basestyle.css
@@ -108,7 +108,7 @@ body{
 .signup-div{
   /* border-radius: 7px; */
   /* box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.15); */
-  padding: 2em 5em;
+  /* padding: 2em 5em; */
 }
 
 .ltxt{
