--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -8,9 +8,9 @@
 {% block body %}
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-md-5 mt-5 login-div">
-        <div class="d-flex justify-content-center mb-5">
-          <img class="logo" src="{{url_for('static', filename='images/sead_logo.png')}}" alt="">
+    <div class="col-11 col-md-4 mt-5 px-4 login-div">
+        <div class="d-flex justify-content-center mb-5 logo-div">
+          <img class="img-responsive logo" src="{{url_for('static', filename='images/sead_logo.png')}}" alt="">
         </div>
         <h3 class="text-left wtxt mb-3">Log in to your<br/>account</h3>
         <form action="/login" method="POST">
