--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -9,7 +9,7 @@
 {% block body %}
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-md-5 mt-1 signup-div">
+        <div class="col-11 col-md-4 mt-5 px-4 mt-1 signup-div">
           <div class="d-flex justify-content-center mb-1">
             <img class="logo" src="{{url_for('static', filename='images/sead_logo.png')}}" alt="">
           </div>
